# mail-sender

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: main.rs
